<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:background="@color/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="고시촌에서 뭐 먹지?"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title"
            android:textSize="20sp"
            />
    </androidx.appcompat.widget.Toolbar>
    <ViewFlipper
        android:id="@+id/image_slide"
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/food1" />
        <ImageView android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/food2"/>
        <ImageView android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/food3"/>
        <ImageView android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/food4"/>
        <ImageView android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/food5"/>
    </ViewFlipper>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/korean"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f1"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="22dp" />
            <Button
                android:id="@+id/snack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f2"
                android:fontFamily="@font/typo_ssangmundongb"
                android:backgroundTint="@color/button"
                android:textSize="22dp" />
            <Button
                android:id="@+id/japanese"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f3"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="22dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/western"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f4"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
            <Button
                android:id="@+id/chinese"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f5"
                android:fontFamily="@font/typo_ssangmundongb"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
            <Button
                android:id="@+id/etc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f6"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/chicken"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f7"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
            <Button
                android:id="@+id/pizza"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f12"
                android:fontFamily="@font/typo_ssangmundongb"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
            <Button
                android:id="@+id/dessert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f8"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/fastfood"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f9"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
            <Button
                android:id="@+id/lunchbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f10"
                android:fontFamily="@font/typo_ssangmundongb"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
            <Button
                android:id="@+id/fusion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/f11"
                android:fontFamily="@font/typo_ssangmundongb"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:backgroundTint="@color/button"
                android:textSize="25dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>